--- a/public/css/style.css
+++ b/public/css/style.css
@@ -642,6 +642,21 @@ video {
   margin-right: 0.75rem;
 }
 
+.mx-2{
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
+.mx-0\.5{
+  margin-left: 0.125rem;
+  margin-right: 0.125rem;
+}
+
+.mx-0{
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
 .mt-7{
   margin-top: 1.75rem;
 }
@@ -710,6 +725,18 @@ video {
   margin-left: 3px;
 }
 
+.mt-12{
+  margin-top: 3rem;
+}
+
+.mt-6{
+  margin-top: 1.5rem;
+}
+
+.mb-6{
+  margin-bottom: 1.5rem;
+}
+
 .flex{
   display: flex;
 }
@@ -757,6 +784,10 @@ video {
 
 .h-\[6px\]{
   height: 6px;
+}
+
+.h-\[\]{
+  height: ;
 }
 
 .w-full{
@@ -832,6 +863,10 @@ video {
   width: 135px;
 }
 
+.w-\[96\%\]{
+  width: 96%;
+}
+
 .w-\[110px\]{
   width: 110px;
 }
@@ -848,28 +883,48 @@ video {
   width: ;
 }
 
-.w-\[9\]{
-  width: 9;
+.w-\[10px\]{
+  width: 10px;
 }
 
-.w-\[95\]{
-  width: 95;
+.w-\[1000px\]{
+  width: 1000px;
 }
 
-.w-\[955\]{
-  width: 955;
+.w-\[80\%\]{
+  width: 80%;
 }
 
-.w-\[95\%\]{
-  width: 95%;
+.w-\[200px\]{
+  width: 200px;
 }
 
-.w-\[96\%\]{
-  width: 96%;
+.w-\[85\%\]{
+  width: 85%;
+}
+
+.w-\[100\%\]{
+  width: 100%;
+}
+
+.w-\[90px\]{
+  width: 90px;
+}
+
+.w-\[95px\]{
+  width: 95px;
 }
 
 .flex-\[2\]{
   flex: 2;
+}
+
+.flex-1{
+  flex: 1 1 0%;
+}
+
+.flex-\[1\]{
+  flex: 1;
 }
 
 .transform{
@@ -1045,6 +1100,30 @@ video {
   background-color: rgb(32 184 75 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#6A2121\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(106 33 33 / var(--tw-bg-opacity));
+}
+
+.bg-black-about{
+  --tw-bg-opacity: 1;
+  background-color: rgb(24 24 24 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#25319F\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 49 159 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#138A34\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(19 138 52 / var(--tw-bg-opacity));
+}
+
+.bg-\[\]{
+  background-color: ;
+}
+
 .py-3{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -1070,11 +1149,6 @@ video {
   padding-right: 1rem;
 }
 
-.py-20{
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-}
-
 .pt-4{
   padding-top: 1rem;
 }
@@ -1085,6 +1159,14 @@ video {
 
 .pb-5{
   padding-bottom: 1.25rem;
+}
+
+.pb-\[49px\]{
+  padding-bottom: 49px;
+}
+
+.text-center{
+  text-align: center;
 }
 
 .text-justify{
@@ -1133,6 +1215,10 @@ video {
   line-height: 30px;
 }
 
+.leading-7{
+  line-height: 1.75rem;
+}
+
 .text-black-list{
   --tw-text-opacity: 1;
   color: rgb(150 161 170 / var(--tw-text-opacity));
@@ -1143,9 +1229,28 @@ video {
   color: rgb(24 24 24 / var(--tw-text-opacity));
 }
 
+.text-\[\#47474B\]{
+  --tw-text-opacity: 1;
+  color: rgb(71 71 75 / var(--tw-text-opacity));
+}
+
+.opacity-60{
+  opacity: 0.6;
+}
+
+.opacity-100{
+  opacity: 1;
+}
+
 .shadow-xl{
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow{
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1221,6 +1326,21 @@ html {
 .hover\:bg-black-nav:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(44 44 48 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#AB3434\]:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(171 52 52 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#3243D8\]:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(50 67 216 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#20B84B\]:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(32 184 75 / var(--tw-bg-opacity));
 }
 
 .hover\:text-white-primary:hover{
@@ -1329,6 +1449,10 @@ html {
 
   .md-768\:mr-5{
     margin-right: 1.25rem;
+  }
+
+  .md-768\:mt-20{
+    margin-top: 5rem;
   }
 
   .md-768\:flex{
